common-applications/test-environment/openeuler-software-package-server/hook-delivery/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: hook-delivery-ingress
  namespace: openeuler-software-pkg
spec:
  tls:
    - hosts:
        - software-pkg.test.osinfra.cn
      secretName: openeuler-software-pkg-tls
  rules:
    - host: software-pkg.test.osinfra.cn
      http:
        paths:
        - backend:
            serviceName: hook-delivery-service
            servicePort: 80
          path: /hook-delivery(/|$)(.*)
